--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
 # Use >= for development versions so that source builds always work
 coala>=0.8.0.dev20160816210322
 setuptools>=19.2
-munkres3==1.*
-pylint==1.*
-language-check==0.8.*
-autopep8==1.*
-eradicate==0.1.*
-autoflake==0.6.*
-restructuredtext_lint==0.14.*
-proselint==0.3.*
-cpplint==1.*
-yapf==0.10.*
-isort==4.*
-html-linter==0.3.*
+munkres3~=1.0
+pylint~=1.0
+language-check~=0.8
+autopep8~=1.0
+eradicate~=0.1
+autoflake~=0.6
+restructuredtext_lint~=0.14
+proselint~=0.3
+cpplint~=1.0
+yapf~=0.10
+isort~=4.0
+html-linter~=0.3
 # Do *not* use 0.3 which is not backwards compatible to common clang versions
 libclang-py3==0.2
-guess-language-spirit==0.5.*
-radon==1.*
-requests==2.*
-yamllint==1.*
-cppclean==0.9.*
-pydocstyle==1.*
-cmakelint==1.*
-vim-vint==0.3.*
+guess-language-spirit~=0.5
+radon~=1.0
+requests~=2.0
+yamllint~=1.0
+cppclean~=0.9
+pydocstyle~=1.0
+cmakelint~=1.0
+vim-vint~=0.3
 # Stable version 3.2 is problematic in Windows.
-# Use >=3.3,==3.* once nltk-3.3 is released.
-nltk==3.1.*
-appdirs==1.*
-pyyaml==3.*
-vulture==0.10.*
+# Use >=3.3,~=3.* once nltk-3.3 is released.
+nltk~=3.1
+appdirs~=1.0
+pyyaml~=3.0
+vulture~=0.10
 mypy-lang~=0.4
